// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Image loads uses the filesystem url for remote images with caching 1`] = `
<View
  accessibilityRole="image"
  accessible={true}
  isCached={true}
  loaderType="spinner"
  onLayout={[Function]}
  previewSource={
    Object {
      "uri": "https://www.logolynx.com/images/logolynx/43/430c07f27af3fda19373042528edbe3d.jpeg",
    }
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F7F9FC",
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderRadius": 16,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "display": "flex",
      "height": 200,
      "justifyContent": "center",
      "width": 200,
    }
  }
  tint="dark"
  transitionDuration={300}
>
  <Image
    blurRadius={0}
    source={
      Object {
        "uri": "https://www.logolynx.com/images/logolynx/43/430c07f27af3fda19373042528edbe3d.jpeg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "height": "100%",
          "width": "100%",
          "zIndex": 1,
        },
      ]
    }
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": undefined,
        "bottom": 0,
        "display": "flex",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "color": "#C5CEE0",
              "flex": 0,
            },
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Loading indicator"
        accessibilityRole="progressbar"
        accessible={true}
        animating={true}
        spinnerSize={15}
        style={
          Object {
            "height": 15,
            "width": 15,
          }
        }
        variant="spinner"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "height": 15,
                "transform": Array [
                  Object {
                    "rotate": "82.5deg",
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 7.5,
                  "overflow": "hidden",
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "translateY": 0,
                      },
                      Object {
                        "rotate": "-172.5deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "borderColor": "#C5CEE0",
                        "borderRadius": 7.5,
                        "borderWidth": 1.5,
                        "height": 15,
                        "width": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "height": 15,
                "transform": Array [
                  Object {
                    "rotate": "82.5deg",
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 7.5,
                  "overflow": "hidden",
                  "top": 7.5,
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "translateY": -7.5,
                      },
                      Object {
                        "rotate": "352.5deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "borderColor": "#C5CEE0",
                        "borderRadius": 7.5,
                        "borderWidth": 1.5,
                        "height": 15,
                        "width": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Image loads uses the local url for local images 1`] = `
<View
  accessibilityRole="image"
  accessible={true}
  isCached={true}
  loaderType="spinner"
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F7F9FC",
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderRadius": 16,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "display": "flex",
      "height": 200,
      "justifyContent": "center",
      "width": 200,
    }
  }
  tint="dark"
  transitionDuration={300}
>
  <Image
    backgroundColor="neutral.100"
    borderRadius="l"
    isCached={true}
    loaderType="spinner"
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "height": "100%",
          "width": "100%",
          "zIndex": 2,
        },
      ]
    }
    tint="dark"
    transitionDuration={300}
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": undefined,
        "bottom": 0,
        "display": "flex",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "color": "#C5CEE0",
              "flex": 0,
            },
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Loading indicator"
        accessibilityRole="progressbar"
        accessible={true}
        animating={true}
        spinnerSize={15}
        style={
          Object {
            "height": 15,
            "width": 15,
          }
        }
        variant="spinner"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "height": 15,
                "transform": Array [
                  Object {
                    "rotate": "82.5deg",
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 7.5,
                  "overflow": "hidden",
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "translateY": 0,
                      },
                      Object {
                        "rotate": "-172.5deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "borderColor": "#C5CEE0",
                        "borderRadius": 7.5,
                        "borderWidth": 1.5,
                        "height": 15,
                        "width": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "height": 15,
                "transform": Array [
                  Object {
                    "rotate": "82.5deg",
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 7.5,
                  "overflow": "hidden",
                  "top": 7.5,
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "translateY": -7.5,
                      },
                      Object {
                        "rotate": "352.5deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "borderColor": "#C5CEE0",
                        "borderRadius": 7.5,
                        "borderWidth": 1.5,
                        "height": 15,
                        "width": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Image loads uses the target url for remote images without caching 1`] = `
<View
  accessibilityRole="image"
  accessible={true}
  isCached={false}
  loaderType="spinner"
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F7F9FC",
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderRadius": 16,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "display": "flex",
      "height": 200,
      "justifyContent": "center",
      "width": 200,
    }
  }
  tint="dark"
  transitionDuration={300}
>
  <Image
    backgroundColor="neutral.100"
    borderRadius="l"
    isCached={false}
    loaderType="spinner"
    source={
      Object {
        "uri": "https://wallpaperaccess.com/full/1713248.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "height": "100%",
          "width": "100%",
          "zIndex": 2,
        },
      ]
    }
    tint="dark"
    transitionDuration={300}
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": undefined,
        "bottom": 0,
        "display": "flex",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "color": "#C5CEE0",
              "flex": 0,
            },
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Loading indicator"
        accessibilityRole="progressbar"
        accessible={true}
        animating={true}
        spinnerSize={15}
        style={
          Object {
            "height": 15,
            "width": 15,
          }
        }
        variant="spinner"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "height": 15,
                "transform": Array [
                  Object {
                    "rotate": "82.5deg",
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 7.5,
                  "overflow": "hidden",
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "translateY": 0,
                      },
                      Object {
                        "rotate": "-172.5deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "borderColor": "#C5CEE0",
                        "borderRadius": 7.5,
                        "borderWidth": 1.5,
                        "height": 15,
                        "width": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "height": 15,
                "transform": Array [
                  Object {
                    "rotate": "82.5deg",
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 7.5,
                  "overflow": "hidden",
                  "top": 7.5,
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "translateY": -7.5,
                      },
                      Object {
                        "rotate": "352.5deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "borderColor": "#C5CEE0",
                        "borderRadius": 7.5,
                        "borderWidth": 1.5,
                        "height": 15,
                        "width": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Image passes the snapshot test for basic setup 1`] = `
Array [
  <View
    accessibilityRole="image"
    accessible={true}
    isCached={true}
    loaderType="spinner"
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F9FC",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "display": "flex",
        "height": 200,
        "justifyContent": "center",
        "width": 200,
      }
    }
    tint="dark"
    transitionDuration={300}
  >
    <Image
      backgroundColor="neutral.100"
      borderRadius="l"
      isCached={true}
      loaderType="spinner"
      source={1}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": "100%",
            "width": "100%",
            "zIndex": 2,
          },
        ]
      }
      tint="dark"
      transitionDuration={300}
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "bottom": 0,
          "display": "flex",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "color": "#C5CEE0",
                "flex": 0,
              },
            ],
          ]
        }
      >
        <View
          accessibilityLabel="Loading indicator"
          accessibilityRole="progressbar"
          accessible={true}
          animating={true}
          spinnerSize={15}
          style={
            Object {
              "height": 15,
              "width": 15,
            }
          }
          variant="spinner"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 15,
                  "transform": Array [
                    Object {
                      "rotate": "82.5deg",
                    },
                    Object {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "height": 7.5,
                    "overflow": "hidden",
                    "width": 15,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "translateY": 0,
                        },
                        Object {
                          "rotate": "-172.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderColor": "#C5CEE0",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 15,
                  "transform": Array [
                    Object {
                      "rotate": "82.5deg",
                    },
                    Object {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "height": 7.5,
                    "overflow": "hidden",
                    "top": 7.5,
                    "width": 15,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "translateY": -7.5,
                        },
                        Object {
                          "rotate": "352.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderColor": "#C5CEE0",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="image"
    accessible={true}
    isCached={true}
    loaderType="spinner"
    onLayout={[Function]}
    previewSource={
      Object {
        "uri": "https://www.logolynx.com/images/logolynx/43/430c07f27af3fda19373042528edbe3d.jpeg",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F9FC",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "display": "flex",
        "height": 200,
        "justifyContent": "center",
        "width": 200,
      }
    }
    tint="dark"
    transitionDuration={300}
  >
    <Image
      blurRadius={0}
      source={
        Object {
          "uri": "https://www.logolynx.com/images/logolynx/43/430c07f27af3fda19373042528edbe3d.jpeg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": "100%",
            "width": "100%",
            "zIndex": 1,
          },
        ]
      }
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "bottom": 0,
          "display": "flex",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "color": "#C5CEE0",
                "flex": 0,
              },
            ],
          ]
        }
      >
        <View
          accessibilityLabel="Loading indicator"
          accessibilityRole="progressbar"
          accessible={true}
          animating={true}
          spinnerSize={15}
          style={
            Object {
              "height": 15,
              "width": 15,
            }
          }
          variant="spinner"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 15,
                  "transform": Array [
                    Object {
                      "rotate": "82.5deg",
                    },
                    Object {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "height": 7.5,
                    "overflow": "hidden",
                    "width": 15,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "translateY": 0,
                        },
                        Object {
                          "rotate": "-172.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderColor": "#C5CEE0",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 15,
                  "transform": Array [
                    Object {
                      "rotate": "82.5deg",
                    },
                    Object {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "height": 7.5,
                    "overflow": "hidden",
                    "top": 7.5,
                    "width": 15,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "translateY": -7.5,
                        },
                        Object {
                          "rotate": "352.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderColor": "#C5CEE0",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/Image passes the snapshot test for the fallback methods if there is an error while fetching the image 1`] = `
Array [
  <View
    accessibilityRole="image"
    accessible={true}
    fallbackSource={
      Object {
        "uri": "https://cdn.segmentnext.com/wp-content/themes/segmentnext/images/no-image-available.jpg",
      }
    }
    isCached={true}
    loaderType="progressive"
    onLayout={[Function]}
    previewSource={
      Object {
        "uri": "https://www.wpbeginner.com/wp-content/uploads/2020/03/ultimate-small-business-resource-coronavirus.png",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F9FC",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "display": "flex",
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      }
    }
    tint="dark"
    transitionDuration={300}
  >
    <Image
      blurRadius={0}
      source={
        Object {
          "uri": "https://www.wpbeginner.com/wp-content/uploads/2020/03/ultimate-small-business-resource-coronavirus.png",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": "100%",
            "width": "100%",
            "zIndex": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 3,
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoBlurView
        proxiedProperties={
          Object {
            "intensity": 100,
            "tint": "dark",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
  </View>,
  <View
    accessibilityRole="image"
    accessible={true}
    isCached={true}
    loaderType="progressive"
    onLayout={[Function]}
    previewSource={
      Object {
        "uri": "https://www.wpbeginner.com/wp-content/uploads/2020/03/ultimate-small-business-resource-coronavirus.png",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F9FC",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "display": "flex",
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      }
    }
    tint="dark"
    transitionDuration={300}
  >
    <Image
      blurRadius={0}
      source={
        Object {
          "uri": "https://www.wpbeginner.com/wp-content/uploads/2020/03/ultimate-small-business-resource-coronavirus.png",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": "100%",
            "width": "100%",
            "zIndex": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 3,
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoBlurView
        proxiedProperties={
          Object {
            "intensity": 100,
            "tint": "dark",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`Molecules/Image passes the snapshot test for the various progressive loading indicators 1`] = `
Array [
  <View
    accessibilityRole="image"
    accessible={true}
    isCached={false}
    loaderType="progressive"
    onLayout={[Function]}
    previewColor="#934a9a"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F9FC",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "display": "flex",
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      }
    }
    tint="dark"
    transitionDuration={300}
  >
    <Image
      backgroundColor="neutral.100"
      borderRadius="l"
      isCached={false}
      loaderType="progressive"
      previewColor="#934a9a"
      source={
        Object {
          "uri": "https://www.pixel4k.com/wp-content/uploads/2020/08/the-valley-minimal-4k_1596932776.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": "100%",
            "width": "100%",
            "zIndex": 2,
          },
        ]
      }
      tint="dark"
      transitionDuration={300}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#934a9a",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 3,
        }
      }
    />
  </View>,
  <View
    accessibilityRole="image"
    accessible={true}
    isCached={false}
    loaderType="progressive"
    onLayout={[Function]}
    previewSource={1}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F9FC",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "display": "flex",
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      }
    }
    tint="dark"
    transitionDuration={300}
  >
    <Image
      backgroundColor="neutral.100"
      borderRadius="l"
      isCached={false}
      loaderType="progressive"
      previewSource={1}
      source={
        Object {
          "uri": "https://www.pixel4k.com/wp-content/uploads/2020/08/the-valley-minimal-4k_1596932776.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": "100%",
            "width": "100%",
            "zIndex": 2,
          },
        ]
      }
      tint="dark"
      transitionDuration={300}
    />
    <Image
      blurRadius={0}
      source={1}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": "100%",
            "width": "100%",
            "zIndex": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 3,
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoBlurView
        proxiedProperties={
          Object {
            "intensity": 100,
            "tint": "dark",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
  </View>,
  <View
    accessibilityRole="image"
    accessible={true}
    isCached={false}
    loaderType="spinner"
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F9FC",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "display": "flex",
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      }
    }
    tint="dark"
    transitionDuration={300}
  >
    <Image
      backgroundColor="neutral.100"
      borderRadius="l"
      isCached={false}
      loaderType="spinner"
      source={
        Object {
          "uri": "https://wallpaperaccess.com/full/1713248.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 16,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": "100%",
            "width": "100%",
            "zIndex": 2,
          },
        ]
      }
      tint="dark"
      transitionDuration={300}
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "bottom": 0,
          "display": "flex",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "color": "#C5CEE0",
                "flex": 0,
              },
            ],
          ]
        }
      >
        <View
          accessibilityLabel="Loading indicator"
          accessibilityRole="progressbar"
          accessible={true}
          animating={true}
          spinnerSize={15}
          style={
            Object {
              "height": 15,
              "width": 15,
            }
          }
          variant="spinner"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 15,
                  "transform": Array [
                    Object {
                      "rotate": "82.5deg",
                    },
                    Object {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "height": 7.5,
                    "overflow": "hidden",
                    "width": 15,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "translateY": 0,
                        },
                        Object {
                          "rotate": "-172.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderColor": "#C5CEE0",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 15,
                  "transform": Array [
                    Object {
                      "rotate": "82.5deg",
                    },
                    Object {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "height": 7.5,
                    "overflow": "hidden",
                    "top": 7.5,
                    "width": 15,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "translateY": -7.5,
                        },
                        Object {
                          "rotate": "352.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderColor": "#C5CEE0",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/Image triggers onError to be triggered and final image to be hidden in when an error occurs while fetching a remote image 1`] = `
<View
  accessibilityRole="image"
  accessible={true}
  isCached={true}
  loaderType="spinner"
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F7F9FC",
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderRadius": 16,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "display": "flex",
      "height": 200,
      "justifyContent": "center",
      "width": 200,
    }
  }
  tint="dark"
  transitionDuration={300}
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": undefined,
        "bottom": 0,
        "display": "flex",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "color": "#C5CEE0",
              "flex": 0,
            },
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Loading indicator"
        accessibilityRole="progressbar"
        accessible={true}
        animating={true}
        spinnerSize={15}
        style={
          Object {
            "height": 15,
            "width": 15,
          }
        }
        variant="spinner"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "height": 15,
                "transform": Array [
                  Object {
                    "rotate": "82.5deg",
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 7.5,
                  "overflow": "hidden",
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "translateY": 0,
                      },
                      Object {
                        "rotate": "-172.5deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "borderColor": "#C5CEE0",
                        "borderRadius": 7.5,
                        "borderWidth": 1.5,
                        "height": 15,
                        "width": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "height": 15,
                "transform": Array [
                  Object {
                    "rotate": "82.5deg",
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 7.5,
                  "overflow": "hidden",
                  "top": 7.5,
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "translateY": -7.5,
                      },
                      Object {
                        "rotate": "352.5deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "borderColor": "#C5CEE0",
                        "borderRadius": 7.5,
                        "borderWidth": 1.5,
                        "height": 15,
                        "width": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
